# MagsacLib

./: CMakeLists.txt  cpp_example.cpp  new_example.cpp  test_example.cpp  utils.cpp  utils.h
include/: model.h  ransac.h
include/estimators/: essential_estimator.h  estimator.h
include/mvg_solver/: solver_essential_matrix_bundle_adjustment.hpp  solver_essential_matrix_five_point_stewenius.hpp  solver_essential_matrix_three_point_sweeny.hpp  solver_fundamental_matrix_eight_point.hpp
include/relative_pose/: bundle.h
include/samplers/: uniform_sampler.h
magsac/include/: GCRANSAC.h  estimators.h  magsac.h  math_utils.h  model.h  model_score.h  scoring_function.h  settings.h  statistics.h  types.h  uniform_random_generator.h  utils.h
magsac/include/estimators/: essential_estimator.h  estimator.h  fundamental_estimator.h  homography_estimator.h  linear_model_estimator.h  perspective_n_point_estimator.h  radial_homography_estimator.h  rigid_transformation_estimator.h  solver_engine.h  solver_essential_matrix_bundle_adjustment.h  solver_essential_matrix_five_point_stewenius.h  solver_fundamental_matrix_eight_point.h  solver_fundamental_matrix_plane_and_parallax.h  solver_fundamental_matrix_seven_point.h  solver_homography_four_point.h
magsac/include/estimators/solver/: solver_engine.h  solver_essential_matrix_bundle_adjustment.h  solver_essential_matrix_five_point_stewenius.h  solver_essential_matrix_three_point_sweeny.cpp  solver_essential_matrix_three_point_sweeny.h  solver_fundamental_matrix_eight_point.h
magsac/include/neighborhood/: flann_neighborhood_graph.h  grid_neighborhood_graph.h  neighborhood_graph.h
magsac/include/preemption/: preemption_empty.h
magsac/include/samplers/: progressive_napsac_sampler.h  prosac_sampler.h  sampler.h  single_point_sampler.h  uniform_random_generator.h  uniform_sampler.h
